--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
     "es6": true,
     "enhance": true,
     "compileHotReLoad": false,
-    "postcss": true,
+    "postcss": false,
     "minified": true,
     "babelSetting": {
       "ignore": [],
